frontend/src/pages/_app.scss
@use "./theme.scss" as theme;

:root {
    --link: #3db8e9;
    --monospace: "Menlo", "Monaco", monospace;
}

.themePlum {
    @include theme.theme(#951fd9, #292f33);

    .cm-content {
        color: #8599b3;

        cursor: text;
    }

    .cm-gutters,
    .cm-content {
        font-size: var(--cm-font-size, 0.8rem);
        font-family: var(--monospace);
        line-height: 1.5;
    }

    .cmt-variableName {
        color: #ff4a98;
    }

    .cmt-punctuation {
        color: #656f7e;
    }

    .cmt-operator {
        color: #7f83ff;
    }

    .cmt-comment {
        color: #465173;
    }

    .cmt-string,
    .cmt-number,
    .cmt-bool {
        color: #0afafa;
    }

    .cmt-typeName {
        color: #45b8ff;
    }

    .cmt-keyword {
        color: #7f83ff;
    }

    .cmt-meta {
        color: #3bff6c;
    }
}

.cm-panel {
    font-size: 1rem;

    // from Button.module.scss
    .cm-button {
        border-radius: 4px;
        padding: 0.4em 0.8em;

        font-size: 0.8rem;
        font-weight: 500;

        user-select: none;
        appearance: none;

        display: inline-flex;
        gap: 0.5em;
        align-items: center;

        background: transparent;
        color: var(--a800);
        border: 1px solid var(--g500);

        &:not(:disabled) {
            cursor: pointer;

            &:hover {
                color: var(--a900);
                border-color: var(--g800);
            }
        }
    }

    .cm-textfield {
        padding: 0.4em 0.6em;

        color: var(--g1200);
        background: var(--g200);
        font: 0.8rem var(--monospace);
        border: 1px solid var(--g500);
        border-radius: 4px;

        outline: none !important;

        &::-webkit-input-placeholder {
            color: var(--g700);
        }
    }

    input[type=checkbox] {
        vertical-align: middle;
    }
}

html {
    font-size: 16px;
    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji;
    line-height: 1.5;
    text-rendering: optimizeQuality;
    overflow: hidden;
}

*,
*::before,
*::after {
    box-sizing: border-box;
    font-size: inherit;
    font-family: inherit;
}

* {
    margin: 0;
    padding: 0;
    color: inherit;
    text-decoration: inherit;
}

body {
    background: var(--g200);
    color: var(--a800);

    line-height: 1.25;
    overflow-x: hidden;
    user-select: none;
    position: relative;
}

html,
body {
    height: 100%;
}

#__next {
    display: flex;
    flex-direction: column;
    align-items: center;
    height: 100vh;
    overflow-x: hidden;
    position: relative; // squashes react-laag warning
}

#layers {
    z-index: 999;
}

main {
    flex: 1;
    width: 100%;
}

::selection {
    background: var(--a100);
}

.routerProgressBar {
    z-index: 999;
}

div {
    scrollbar-color: #fff3 transparent;
    scrollbar-width: thin;
}

